--- a/Android- Part3/SIH2020/app/src/main/res/values/strings.xml
+++ b/Android- Part3/SIH2020/app/src/main/res/values/strings.xml
@@ -27,4 +27,12 @@
 
     <!--title and Description-->
     <string name="search_txt">Search...</string>
+
+    <string name="title_activity_maps">Current Place Details</string>
+    <string name="default_info_title">Default Location</string>
+    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
+    <string name="option_get_place">Get place</string>
+    <string name="pick_place">Choose a place</string>
+
+
 </resources>
